--- a/guest-homepage.html
+++ b/guest-homepage.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
-        <img src="/imgs/logooo.png" alt="">
+        <img src="imgs/logooo.png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -112,6 +112,80 @@
     </div>
 
   </section>
+  <section id="aboutUs">
+    <div class="container">
+      <content>
+        <div id="content">
+          <div id="heading">
+            <h2 class="heading1">
+              I am LuuVietHoang, a UI Designer & developer
+            </h2>
+            <h3 class="heading2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </h3>
+          </div>
+        </div>
+        <div id="container1">
+          <div class="row intro-img">
+            <div class="col-md-4 ">
+              <div class="card">
+                <div class="item1">
+                  <i id="icon1" class="fa-solid fa-desktop"></i>
+                  <h3>Responsive Design</h3>
+                </div>
+                <div class="card-body">
+                  <p class="card-text">GLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum
+                    erat
+                    et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
+                </div>
+
+              </div>
+            </div>
+            <div class="col-md-4 ">
+              <div class="card">
+                <div class="item1">
+                  <i id="icon2" class="fa-brands fa-css3"></i>
+                  <h3>HTML5/CSS3 Dev</h3>
+                </div>
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum
+                    erat
+                    et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 ">
+              <div class="card">
+                <div class="item1">
+                  <i id="icon3" class="fa-solid fa-lightbulb"></i>
+                  <h3>JavaScript jQuery</h3>
+                </div>
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum
+                    erat
+                    et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </content>
+    </div>
+  </section>
+  <div>
+    <section id="maxim" class="ag-parlex">
+      <div class="bg">
+        <div style="
+          text-align: center;
+          padding-top: 75px;
+          padding-bottom: 65px;
+          " class="container secPad text-center">
+          <h2>Do what you like - Love what you do</h2>
+          <h3>Hoang Tu GIo</h3>
+        </div>
+      </div>
+    </section>
+  </div>
   <!-- skill -->
   <section id="skills" class="myskill">
     <div class="container">
@@ -217,10 +291,72 @@
       </div>
     </div>
   </section>
+  <section id="contactUs" class="secPad">
+    <div  class="container">
+      <div class="row">
+        <div style=" padding: 3px 10px 15px; margin-bottom: 30px;" class="heading text-center">
+          <h2 style="color: red;">Let's Keep In Touch!</h2>
+          <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the
+            form below.</p>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label style="font-size: 14px;" for="exampleInputPassword1">Name</label>
+            <input type="name" name="txtName" class="form-control"  id="txtName"
+              placeholder="Enter Name">
+            <span id="nameError"></span>
+          </div>
+          <form>
+            <div class="form-group">
+              <label style="font-size: 14px;" for="exampleInputEmail1">Email address</label>
+              <input type="email" name="txtEmail" class="form-control" id="txtEmail" 
+                placeholder="Enter email">
+              <span id="emailError"></span>
+            </div>
+          </form>
+        </div>
+        <div class="col-sm-4">
+          <div class="form-group">
+            <label style="font-size: 14px;" for="comments">Comments</label>
+            <textarea name="txtComment" class="form-control" id="txtComment" cols="50" rows="4"
+              placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
+            <span id="commentError"></span>
+          </div>
+          <button style="background-color: #cc4646; border: 0;" name="submit" type="submit"
+            class="btn btn-lg btn-primary" id="btnCheck">Submit</button>
 
-  
-  </div>
-  
+        </div>
+        <div class="col-sm-4">
+          <h4 style="font-size: 18px;">Address:</h4>
+          <address style="font-size: 15px;">
+            Tây Sơn<br>
+            Đống Đa - Hà Nội <br>
+
+            <br>
+          </address>
+          <h4>Phone:</h4>
+          <address>
+            0388888666<br>
+          </address>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="social text-center">
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </div>
+  </footer>
+
   <script src="js/guest-homepage.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
