hoan thanh phan portfolio

--- a/guest-homepage.html
+++ b/guest-homepage.html
@@ -293,6 +293,167 @@
       </div>
     </div>
   </section>
+  <!--Portfolio-->
+  <section id="portfolio" class="page-section section appear clearfix secPad">
+    <div class="container">
+
+      <div class="heading text-center">
+        <!-- Heading -->
+        <h2 style="color: white;">Portfolio</h2>
+        <p style="color:white;">At lorem Ipsum available, but the majority have suffered alteration in some form by
+          injected humour.</p>
+      </div>
+
+      <div class="row">
+        <nav id="filter" class="col-md-12 text-center">
+          <ul>
+            <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Web Design</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".photography">Photography</a></li>
+            <li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
+          </ul>
+        </nav>
+        <div class="col-md-12">
+          <div class="row">
+            <div class="portfolio-items isotopeWrapper clearfix" id="3">
+
+              <article class="col-sm-4 isotopeItem webdesign">
+                <div class="portfolio-item">
+                  <img src="imgs/h1.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h1.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem photography">
+                <div class="portfolio-item">
+                  <img src="imgs/h2.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h2.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+
+              <article class="col-sm-4 isotopeItem photography">
+                <div class="portfolio-item">
+                  <img src="imgs/h3.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h3.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem print">
+                <div class="portfolio-item">
+                  <img src="imgs/h4.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h4.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem photography">
+                <div class="portfolio-item">
+                  <img src="imgs/h5.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h5.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem webdesign">
+                <div class="portfolio-item">
+                  <img src="imgs/h6.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h6.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem print">
+                <div class="portfolio-item">
+                  <img src="imgs/h7.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h7.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem photography">
+                <div class="portfolio-item">
+                  <img src="imgs/h8.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h8.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+
+              <article class="col-sm-4 isotopeItem print">
+                <div class="portfolio-item">
+                  <img src="imgs/h10.jpg" alt="" />
+                  <div class="portfolio-desc align-center">
+                    <div class="folio-info">
+                      <a href="imgs/h10.jpg" class="fancybox">
+                        <h5>Project Name</h5>
+                        <i class="fa fa-arrows-alt fa-2x"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </div>
+
+          </div>
+
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <!-- contactUS -->
   <section id="contactUs" class="secPad">
     <div  class="container">
