--- a/guest-homepage.html
+++ b/guest-homepage.html
@@ -293,6 +293,141 @@
       </div>
     </div>
   </section>
+
+  <!--Experience-->
+  <section id="experience" class="secPad">
+    <div class="container">
+      <div class="heading text-center">
+        <!-- Heading -->
+        <h2>Professional Experience</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+      </div>
+      <div id="timeline">
+        <div class="row timeline-movement timeline-movement-top">
+          <div class="timeline-badge timeline-future-movement">
+            <a href="#">
+              <span class="glyphicon glyphicon-plus"></span>
+            </a>
+          </div>
+
+        </div>
+        <div class="row timeline-movement">
+          <div class="col-sm-6  timeline-item">
+            <div class="row">
+              <div class="col-sm-11">
+                <div class="timeline-panel credits">
+                  <ul class="timeline-panel-ul">
+                    <li><span class="importo">Mussum ipsum cacilds</span></li>
+                    <li><span class="causale">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> </li>
+                    <li>
+                      <p><small class="text-muted"> 18/02/2014 - Present</small></p>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6  timeline-item">
+            <div class="row">
+              <div class="col-sm-offset-1 col-sm-11">
+                <div class="timeline-panel debits">
+                  <ul class="timeline-panel-ul">
+                    <li><span class="importo">Mussum ipsum cacilds</span></li>
+                    <li><span class="causale">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> </li>
+                    <li>
+                      <p><small class="text-muted"> 18/02/2014 - Present</small></p>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--due -->
+
+        <div class="row timeline-movement">
+          <div class="col-sm-offset-6 col-sm-6  timeline-item">
+            <div class="row">
+              <div class="col-sm-offset-1 col-sm-11">
+                <div class="timeline-panel debits">
+                  <ul class="timeline-panel-ul">
+                    <li><span class="importo">Mussum ipsum cacilds</span></li>
+                    <li><span class="causale">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> </li>
+                    <li>
+                      <p><small class="text-muted"> 10/03/2013 - 18/02/2014</small></p>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6  timeline-item">
+            <div class="row">
+              <div class="col-sm-11">
+                <div class="timeline-panel credits">
+                  <ul class="timeline-panel-ul">
+                    <li><span class="importo">Mussum ipsum cacilds</span></li>
+                    <li><span class="causale">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> </li>
+                    <li>
+                      <p><small class="text-muted"> 10/03/2013 - 18/02/2014</small></p>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <div class="row timeline-movement">
+          <div class="col-sm-offset-6 col-sm-6  timeline-item">
+            <div class="row">
+              <div class="col-sm-offset-1 col-sm-11">
+                <div class="timeline-panel debits">
+                  <ul class="timeline-panel-ul">
+                    <li><span class="importo">Mussum ipsum cacilds</span></li>
+                    <li><span class="causale">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> </li>
+                    <li>
+                      <p><small class="text-muted"> 11/01/2010 - 10/03/2013</small></p>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6  timeline-item">
+            <div class="row">
+              <div class="col-sm-11">
+                <div class="timeline-panel credits">
+                  <ul class="timeline-panel-ul">
+                    <li><span class="importo">Mussum ipsum cacilds</span></li>
+                    <li><span class="causale">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span> </li>
+                    <li>
+                      <p><small class="text-muted"> 11/01/2010 - 10/03/2013</small></p>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+  </section>
+
   <!--Portfolio-->
   <section id="portfolio" class="page-section section appear clearfix secPad">
     <div class="container">
@@ -305,24 +440,16 @@
       </div>
 
       <div class="row">
-        <nav id="filter" class="col-md-12 text-center">
-          <ul>
-            <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Web Design</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".photography">Photography</a></li>
-            <li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
-          </ul>
-        </nav>
         <div class="col-md-12">
           <div class="row">
             <div class="portfolio-items isotopeWrapper clearfix" id="3">
 
               <article class="col-sm-4 isotopeItem webdesign">
                 <div class="portfolio-item">
-                  <img src="imgs/h1.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h1.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -333,10 +460,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/h2.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h2.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -348,10 +475,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/h3.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h3.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -362,10 +489,10 @@
 
               <article class="col-sm-4 isotopeItem print">
                 <div class="portfolio-item">
-                  <img src="imgs/h4.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h4.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -376,10 +503,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/h5.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h5.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -390,10 +517,10 @@
 
               <article class="col-sm-4 isotopeItem webdesign">
                 <div class="portfolio-item">
-                  <img src="imgs/h6.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h6.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -404,10 +531,10 @@
 
               <article class="col-sm-4 isotopeItem print">
                 <div class="portfolio-item">
-                  <img src="imgs/h7.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h7.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -418,10 +545,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/h8.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h8.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -432,10 +559,10 @@
 
               <article class="col-sm-4 isotopeItem print">
                 <div class="portfolio-item">
-                  <img src="imgs/h10.jpg" alt="" />
+                  <img src="imgs/anhtranbinh.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/h10.jpg" class="fancybox">
+                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -453,10 +580,9 @@
 
     </div>
   </section>
-
   <!-- contactUS -->
   <section id="contactUs" class="secPad">
-    <div  class="container">
+    <div class="container">
       <div class="row">
         <div style=" padding: 3px 10px 15px; margin-bottom: 30px;" class="heading text-center">
           <h2 style="color: red;">Let's Keep In Touch!</h2>
@@ -468,15 +594,13 @@
         <div class="col-sm-4">
           <div class="form-group">
             <label style="font-size: 14px;" for="exampleInputPassword1">Name</label>
-            <input type="name" name="txtName" class="form-control"  id="txtName"
-              placeholder="Enter Name">
+            <input type="name" name="txtName" class="form-control" id="txtName" placeholder="Enter Name">
             <span id="nameError"></span>
           </div>
           <form>
             <div class="form-group">
               <label style="font-size: 14px;" for="exampleInputEmail1">Email address</label>
-              <input type="email" name="txtEmail" class="form-control" id="txtEmail" 
-                placeholder="Enter email">
+              <input type="email" name="txtEmail" class="form-control" id="txtEmail" placeholder="Enter email">
               <span id="emailError"></span>
             </div>
           </form>
