--- a/admin.html
+++ b/admin.html
@@ -1,69 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/admin.css" />
-  </head>
-  <body>
-    <div class="name">
-    <span >List</span>
-    <span >Profile</span>
-    <span >Team</span>
-    <span >13</span>
-    </div>
-    <div class="title">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Admin</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/admin.css">
+
+<body>
+
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light ">
+      <div class="container">
+        <h3 class="logo">Profile</h3>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav ms-auto ">
+            <li class="nav-item">
+              <a style="border: bottom 2px solid white;" class="nav-link active" aria-current="page" href="guest-home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registration.html">Resgistration</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div>
       <div class="row">
-        <div class="col">
-            <div class="card" style="width: 20rem;">
-                <img src="https://scontent.fhan2-1.fna.fbcdn.net/v/t1.6435-9/172067921_447505829686380_5541282076079738970_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=vQlR_KBMx-YAX87Lo6U&_nc_ht=scontent.fhan2-1.fna&oh=00_AT-SQ03Fbbsq2uEQLHuX9HIaeCu-5RGMTZdEU7y9Z_7FfQ&oe=626B2B7B" class="card-img-top" alt="..." style="height:25rem;">
-                <div class="card-body">
-                  <h5 class="card-title">Trần Ngọc Bình</h5>
-                  <!-- <p class="card-text">Đại ca</p> -->
-                  <a href="guest-homepage.html" class="btn btn-primary">Go to Profile</a>
+        <div class="col-md-12">
+          <div class="table-wrapper">
+            <div class="table-title">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h2>Records management</h2>
+                </div>
+                <div class="col-sm-6">
+                  <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i
+                      class="material-icons">&#xE147;</i> <span>Add </span></a>
+                  <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i
+                      class="material-icons">&#xE15C;</i> <span>Delete</span></a>
                 </div>
               </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 20rem ;  ">
-                <img src="https://scontent-sin6-4.xx.fbcdn.net/v/t1.6435-9/156616559_446770986747347_6494316934930012969_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=JPkHMHTZYAQAX99RNgU&_nc_ht=scontent-sin6-4.xx&oh=00_AT9s6Ht_VQI_FGzj-tA_iuNms3pPU6ZY_2DEeuLMW20npg&oe=6263A98D" class="card-img-top" alt="..." style="height:25rem;">
-                <div class="card-body">
-                  <h5 class="card-title">Lưu Việt Hoàng</h5>
-                  <!-- <p class="card-text">From : Nam Định</p>
-                  <p class="card-text">Birthday : 17/10/02</p>
-                  <p class="card-text">Education : Thủy Lợi University</p> -->
-                  <a href="guest-homepage.html" class="btn btn-primary">Go to Profile</a>
+            </div>
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>
+                    <span class="custom-checkbox">
+<input type="checkbox" id="selectAll">
+                      <label for="selectAll"></label>
+                    </span>
+                  </th>
+                  <th>Name</th>
+                  <th>Email</th>
+                  <th>Address</th>
+                  <th>Phone</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <section>
+                <div class="row">
+                  <div class="col-md-12">
+                    <tr>
+                      <td>
+                        <span class="custom-checkbox">
+                          <input type="checkbox" id="checkbox1" name="options[]" value="1">
+                          <label for="checkbox1"></label>
+                        </span>
+                      </td>
+                      <td>Trần Ngọc Bình</td>
+                      <td>binhtran@gmail.com</td>
+                      <td>Hà Nam</td>
+                      <td>034567891</td>
+                      <td>
+                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
+                            data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons"
+                            data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                      </td>
+                    </tr>
+                  </div>
                 </div>
+                <tr>
+                  <td>
+                    <span class="custom-checkbox">
+                      <input type="checkbox" id="checkbox2" name="options[]" value="1">
+                      <label for="checkbox2"></label>
+                    </span>
+                  </td>
+                  <td>Lưu Việt Hoàng</td>
+                  <td>viethoang@mail.com</td>
+                  <td>Nam Định</td>
+                  <td>0345171002</td>
+                  <td>
+                    <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
+                        data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                    <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons"
+                        data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span class="custom-checkbox">
+                      <input type="checkbox" id="checkbox3" name="options[]" value="1">
+                      <label for="checkbox3"></label>
+                    </span>
+                  </td>
+                  <td>Phạm Quang Thanh</td>
+                  <td>quangthanh@mail.com</td>
+                  <td>Nam Định</td>
+                  <td>034567890</td>
+                  <td>
+                    <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
+data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                    <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons"
+                        data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                  </td>
+                </tr>
+      
               </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 20rem;">
-                <img src="https://scontent.fhan4-3.fna.fbcdn.net/v/t1.15752-9/275078931_1110158293110541_8897486268164671433_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Fzd49GcENLUAX8jcVLw&_nc_ht=scontent.fhan4-3.fna&oh=03_AVIHJa58dul3SIKyUUo2NOMYgQ7eWX7D6f5QlpmWMm-iHw&oe=6264155C" class="card-img-top" alt="..." style="height:25rem;">
-                <div class="card-body">
-                  <h5 class="card-title">Phạm Quang Thanh</h5>
-                  <!-- <p class="card-text">Thằng em</p> -->
-                  <a href="guest-homepage.html" class="btn btn-primary">Go to Profile</a>
-                </div>
-              </div>
+
         </div>
       </div>
     </div>
-    <!-- <div class="img">
-      <img
-        src="https://scontent-sin6-4.xx.fbcdn.net/v/t1.6435-9/156616559_446770986747347_6494316934930012969_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=JPkHMHTZYAQAX99RNgU&_nc_ht=scontent-sin6-4.xx&oh=00_AT9s6Ht_VQI_FGzj-tA_iuNms3pPU6ZY_2DEeuLMW20npg&oe=6263A98D"
-      />
-      <img
-      src="https://scontent-sin6-4.xx.fbcdn.net/v/t39.30808-6/258824585_574050750365220_920232213609370870_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=y1aqJ8BudwYAX9hkEqT&_nc_ht=scontent-sin6-4.xx&oh=00_AT83YwPKih83vc29eTJUpPd_3K8VWwFAFcnPQ9d3M6BXKw&oe=6240F77A"
-      />
-      <img
-      src="https://scontent.fhan4-3.fna.fbcdn.net/v/t1.15752-9/275078931_1110158293110541_8897486268164671433_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=ae9488&_nc_ohc=Fzd49GcENLUAX8jcVLw&_nc_ht=scontent.fhan4-3.fna&oh=03_AVIHJa58dul3SIKyUUo2NOMYgQ7eWX7D6f5QlpmWMm-iHw&oe=6264155C"
-      />
-    </div> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
-  </body>
-  
+        </section>
+      </table>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
